--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.2.1",
+    "http-proxy-middleware": "^3.0.5",
     "lodash": "^4.17.23",
     "mongoose": "^9.1.6"
   }
